--- a/deepfence_ui/package.json
+++ b/deepfence_ui/package.json
@@ -54,14 +54,13 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.6.1",
-    "babel-core": "^7.0.0-bridge.0",
+    "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
     "babel-plugin-lodash": "^3.2.11",
-    "clean-webpack-plugin": "0.1.16",
+    "clean-webpack-plugin": "^4.0.0",
     "compression": "1.7.1",
-    "copy-webpack-plugin": "^4.3.1",
-    "css-loader": "^2.1.1",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.4.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "8.3.0",
@@ -72,26 +71,28 @@
     "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "expect": "1.20.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^2.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "http-proxy-rules": "1.1.0",
     "immutable-devtools": "0.0.7",
     "json-loader": "^0.5.7",
+    "mini-css-extract-plugin": "^2.4.2",
     "mockdate": "^2.0.1",
-    "node-sass": "4.5.2",
-    "postcss-loader": "^3.0.0",
+    "node-sass": "^4.14.0",
+    "postcss": "^8.3.9",
+    "postcss-loader": "^6.1.1",
     "redux-devtools-extension": "2.13.9",
-    "sass-loader": "6.0.3",
-    "style-loader": "^0.23.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
     "url": "0.11.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^4.46.0"
+    "url-loader": "^4.1.1",
+    "webpack": "^5.58.1",
+    "webpack-cli": "^4.9.0"
   },
   "optionalDependencies": {
     "express": "^4.16.4",
     "http-proxy": "1.16.2",
-    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-middleware": "^5.2.1",
     "webpack-hot-middleware": "^2.22.2"
   },
   "scripts": {
@@ -102,6 +103,9 @@
     "clean": "rm build/app.js"
   },
   "engines": {
-    "node": "^10.19.0"
-  }
+    "node": "^14.0.0"
+  },
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
