--- a/deepfence_agent/supervisord.conf
+++ b/deepfence_agent/supervisord.conf
@@ -18,7 +18,7 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 ; the name of your supervisord program
 [program:discovery]
-environment=SCOPE_HOSTNAME=${SCOPE_HOSTNAME}
+environment=SCOPE_HOSTNAME=${SCOPE_HOSTNAME},MGMT_CONSOLE_URL=${MGMT_CONSOLE_URL},MGMT_CONSOLE_PORT=${MGMT_CONSOLE_PORT}
 command=/home/deepfence/run_discovery.sh
 numprocs=1
 autostart=true
