--- a/deployment-scripts/helm-charts/deepfence-agent/values.yaml
+++ b/deployment-scripts/helm-charts/deepfence-agent/values.yaml
@@ -25,7 +25,8 @@ image:
   pullPolicy: Always
   pullSecretName: deepfence-docker-secret
 
-managementConsoleIp: ""
+managementConsoleUrl: ""
+managementConsolePort: "443"
 
 # Auth: Get deepfence api key from UI -> Settings -> User Management
 deepfenceKey: ""
