Configure elasticsearch replication factor in helm chart

--- a/deployment-scripts/helm-charts/deepfence-console/templates/elasticsearch.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/elasticsearch.yaml
@@ -11,7 +11,7 @@ metadata:
   namespace: {{ .Values.namespace }}
 spec:
   serviceName: deepfence-es
-  replicas: 3
+  replicas: {{ .Values.elasticsearchReplicationFactor }}
   selector:
     matchLabels:
       name: deepfence-es
