used named import for react-table-v6

--- a/deepfence_ui/package.json
+++ b/deepfence_ui/package.json
@@ -35,7 +35,8 @@
     "react-simple-maps": "^2.3.0",
     "react-sliding-side-panel": "^2.0.3",
     "react-sparklines": "^1.7.0",
-    "react-table": "6.10.0",
+    "react-table": "^7.7.0",
+    "react-table-6": "^6.11.0",
     "react-tippy": "^1.2.2",
     "react-tooltip": "4.2.21",
     "react-virtualized": "9.22.3",
