Add demo url link

--- a/deployment-scripts/helm-charts/deepfence-agent/templates/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-agent/templates/deployment.yaml
@@ -25,8 +25,8 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             - cluster-agent
-            - {{ required "managementConsoleUrl is required" .Values.managementConsoleUrl }}
-            - {{ required "managementConsolePort is required" .Values.managementConsolePort }}
+            - "{{ required "managementConsoleUrl is required" .Values.managementConsoleUrl }}"
+            - "{{ required "managementConsolePort is required" .Values.managementConsolePort }}"
           env:
             - name: DEEPFENCE_KEY
               valueFrom:
