Remove unneeded privileged access for redis and backend container #115

--- a/deployment-scripts/helm-charts/deepfence-console/templates/deployment.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/deployment.yaml
@@ -610,6 +610,22 @@ spec:
 {{ end }}
         - name: data
           emptyDir: {}
+      initContainers:
+      - name: init-sysctl
+        image: busybox:latest
+        imagePullPolicy: IfNotPresent
+        securityContext:
+          privileged: true
+        command:
+        - /bin/sh
+        - -c
+        - |
+          sysctl -w net.core.somaxconn=10240
+          sysctl -w net.ipv4.tcp_mem="1048576 1048576 6291456"
+          sysctl -w net.ipv4.tcp_max_syn_backlog=1024
+          sysctl -w net.ipv4.ip_local_port_range="1024 65534"
+          sysctl -w fs.nr_open=1048576
+          sysctl -w fs.file-max=1048576
       containers:
         - name: deepfence-backend
           image: "{{ .Values.image.repository }}deepfence_api_ce:{{ .Values.image.tag }}"
@@ -675,8 +691,6 @@ spec:
 {{ end }}
             - mountPath: /data
               name: data
-          securityContext:
-            privileged: true
           resources:
             requests:
               memory: 512Mi
