--- a/deployment-scripts/helm-charts/deepfence-console/templates/redis.yaml
+++ b/deployment-scripts/helm-charts/deepfence-console/templates/redis.yaml
@@ -30,6 +30,19 @@ spec:
                     values:
                       - "{{ .Values.topologyNodeAffinityHostName }}"
 {{- end }}
+      initContainers:
+      - name: init-sysctl
+        image: busybox:latest
+        imagePullPolicy: IfNotPresent
+        securityContext:
+          privileged: true
+        command:
+        - /bin/sh
+        - -c
+        - |
+          sysctl -w fs.file-max=1048576
+          sysctl -w net.core.somaxconn=512
+          sysctl vm.overcommit_memory=1
       containers:
         - name: deepfence-redis
           image: "{{ .Values.image.repository }}deepfence_redis_ce:{{ .Values.image.tag }}"
@@ -39,8 +52,6 @@ spec:
               value: "Y"
           ports:
             - containerPort: 6379
-          securityContext:
-            privileged: true
           resources:
             requests:
               cpu: {{ .Values.defaultResourceLimits.requests.cpu }}
