Update Makefile to remove runsvinit run-app and run-probe

--- a/deepfence_agent/tools/apache/scope/Makefile
+++ b/deepfence_agent/tools/apache/scope/Makefile
@@ -71,7 +71,7 @@ $(DOCKERHUB_USER)/%: docker/Dockerfile.%
 
 $(CLOUD_AGENT_EXPORT): docker/Dockerfile.cloud-agent docker/$(SCOPE_EXE) docker/deepfence docker/deepfenceutil
 
-$(SCOPE_EXPORT): docker/Dockerfile.scope $(CLOUD_AGENT_EXPORT) docker/$(RUNSVINIT) docker/run-app docker/run-probe docker/entrypoint.sh
+$(SCOPE_EXPORT): docker/Dockerfile.scope $(CLOUD_AGENT_EXPORT) docker/entrypoint.sh
 
 $(RUNSVINIT): vendor/github.com/peterbourgon/runsvinit/*.go
 
