--- a/deployment-scripts/docker-compose.yml
+++ b/deployment-scripts/docker-compose.yml
@@ -109,7 +109,7 @@ services:
     environment:
       - DF_PROG_NAME="es_master"
       - node.name=deepfence-es
-      - discovery.seed_hosts=deepfence-es-slave1,deepfence-es-slave2
+#     - discovery.seed_hosts=deepfence-es-slave1,deepfence-es-slave2
       - cluster.initial_master_nodes=deepfence-es
     ulimits:
       core: 0
