Add open tracer plugin to Scope probe
- Integrate open tracer inside scope
- Add build step to build plugins
- Add new flag to agent to turn on/off open tracer plugin

--- a/deepfence_agent/Dockerfile
+++ b/deepfence_agent/Dockerfile
@@ -37,7 +37,7 @@ COPY tools/apache/scope/docker/agent_check.sh /home/deepfence/
 COPY supervisord.conf /home/deepfence/supervisord-temp.conf
 COPY run_discovery.sh /home/deepfence/
 COPY create_cgroups.sh /home/deepfence/create-cgroups.sh
-COPY tools/deepfence/open_tracer /home/deepfence/
+COPY plugins/bin/* /home/deepfence/ || echo "No plugins found"
 
 RUN chmod 700 /usr/local/bin/fileUploader /usr/local/bin/agentAuth /usr/local/bin/getCloudInstanceId \
     && chmod 700 /usr/local/discovery/deepfence-discovery /home/deepfence/run_discovery.sh \
